--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 author:
   name             : "Damien Lancry"
   avatar           : "/assets/images/bio-photo.jpg"
-  bio              : "Research Assistant @ A*STAR, Graduate from CentraleSupelec and Imperial College London, A.I. / M.L. / D.L. / R.L. enthusiast."
+  bio              : "Research Assistant @ A*STAR, Graduate from CentraleSupélec and Imperial College London, A.I. / M.L. / D.L. / R.L. enthusiast."
   location         : "Singapore"
   email            :
   links:
