--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 # Site Author
 author:
   name             : "Damien Lancry"
-  avatar           : "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/pp.jpg"
   bio              : "Research Assistant @ A*STAR, Graduate from CentraleSupélec and Imperial College London, A.I. / M.L. / D.L. / R.L. enthusiast."
   location         : "Singapore"
   email            :
